[package]
name = "osmrail"
version = "0.1.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbfreader = "0.14.0"
env_logger = "0.8.1"
log = "0.4.11"
structopt = "0.3.20"
anyhow = "1.0.33"
petgraph = "0.5.1"
smartstring = "0.2.6"
